--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <div class="game-board">
+        <span class="score"></span>
         <img src="imagem/clouds.png" class="clouds">
         <img src="imagem/mario.gif" class="mario">
         <img src="imagem/pipe.png" class="pipe">
